--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -329,6 +329,8 @@ jobs:
     #  run: |
     #    python3 -c "import torch; print(torch.__version__)"
     #    LD_PRELOAD="/opt/rocm/lib/libhsa-runtime64.so" HSA=1 BIG=2 TORCHCUDA=1 python3 test/test_speed_v_torch.py | tee torch_speed.txt
+    - name: restore process replay
+      run: python3 test/external/process_replay/restore.py
     - name: Test tensor cores
       run: |
         AMD=1 python3 test/test_linearizer.py TestLinearizer.test_tensor_cores TestLinearizer.test_tensor_cores_padded
